23. Use FontAwesome icons for all action icons.
24. Send a message at least once every 5 seconds to MPD, to ensure connection
    is still valid.
25. Fix updating of playlists if these contain duplicates and are modified by
    another client.
26. Cache up to 4 genres in SQL db.
27. Fix crash when changinh playqueue view type.
28. Use same sidebar inactive tab mouse-over for all styles.

2.0.1
-----
 1. Delay creation of Jamendo and Magnatune DBs until required.
 2. Fix 'Scroll to current track' in table style play queue if track number
    column is hidden.
 3. Add icon for proxy config - if proxy settings enabled.
 4. Fix possibly missing save play queue icon.
 5. Install pre-rendered PNG icons for Linux builds.
 6. Use last.fm 2.0 API for finding similar artists in dynamic playlists.
 7. Fix listing of CUE files.
 8. Only honour 'startHidden' setting if also configured to use system tray.
 9. Folder page nolonger has a search field - so if upgrading from a 1.x
    config with folder search visible, then hide it.
10. Don't allow copying of cue file tracks to devices.
11. When calculating collapsed window height, take into account size of
    menubar, if it is visible.
12. Try to ensure menu button width is at least equal to height.
13. Fix compilation on some systems.
14. Remove usage of libavutil/audioconvert.h - its no longer in ffmpeg since
    1.3, and Cantata does not need it anyway.
15. Fix playback of AudioCDs
16. Fix incorrect AudioCD cover
17. Fix Qt5 gcc5 compilation.
18. Fix wrong/missing ratings in toolbar.
19. Fix compilation with Qt5.7
20. Fix drag'n'drop of non-loaded playlists.
21. Use a single-shot timer to timeout obtaining current cover.
22. Fix AudioCD playback when MPD's curl is using IPv6
23. Fix current track display when chaging from one track with no meta-data to
    another with no meta-data.

2.0.0
-----
 1. Use SQLite database to cache MPD library.
 2. Combine Artists and Albums tabs into a single Library tab. Provide option