@@ -44,7 +44,7 @@ public:
 
     void initActions();
     void setFadingStop(bool f) { fadingStop=f; }
-    void showEvent(QShowEvent *ev);
+    void setColor(const QColor &col);
     void paintEvent(QPaintEvent *ev);
     void mousePressEvent(QMouseEvent *ev);
     void mouseReleaseEvent(QMouseEvent *ev);
@@ -62,7 +62,6 @@ private:
 
 private:
     int lineWidth;
-    bool shown;
     bool down;
     bool fadingStop;
     QColor textCol;
